--- a/niños.html
+++ b/niños.html
@@ -23,7 +23,7 @@
             <div class="container-fluid">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="index.html">
-                        <img src="/Imagenes/logozapa.webp" alt="asdad" width="60" height="45" class="d-inline-block ">
+                        <img src="/Imagenes/logozapa.webp" alt="logo zapatilla" width="60" height="45" class="d-inline-block ">
                         Heck Shoes
                       </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,13 +38,13 @@
                     <a class="nav-link active" aria-current="page" href="niños.html">Niños</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Mujeres</a>
+                    <a class="nav-link" href="mujeres.html">Mujeres</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled">Hombres</a>
+                    <a class="nav-link" href="hombres.html">Hombres</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Contacto</a>
+                    <a class="nav-link" href="contacto.html">Contacto</a>
                   </li>
                 </ul>
               </div>
