--- a/hombres.html
+++ b/hombres.html
@@ -32,7 +32,7 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="niños.html">Niños</a>
@@ -41,7 +41,7 @@
                     <a class="nav-link" href="mujeres.html">Mujeres</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="hombres.html">Hombres</a>
+                    <a class="nav-link active" aria-current="page" href="hombres.html">Hombres</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="contacto.html">Contacto</a>
@@ -53,29 +53,34 @@
           </nav>    
       </header>
 
+      <main>
+          <div class="container img-fluid">
+              <div class="row text-center">
+                  <div class="col-md-12 py-5">
+                      <h2><strong>Training</strong></h2>
+                       <img src="/Imagenes/deportivahombre.webp" class="py-3" alt="dephombre">
+                       <h3>Estilo y calidad</h3>
+                          <a href="hombres.html" class="btn btn-dark">Hace click</a>
+                  </div>
+                  <h2><strong>Urbanas</strong></h2>
+                  <div class="col-md-6 pb-5">
+                      <img src="/Imagenes/zpaurhom1.jpg" class="pt-3" alt="urb1">
+                      <h3>Elegancia</h3>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nesciunt quidem, natus pariatur incidunt suscipit, omnis odit, culpa similique eius assumenda? Rem commodi quibusdam voluptatum pariatur nemo impedit earum reiciendis.</p>
+                  </div>
+                  <div class="col-md-6 pb-5">
+                    <img src="/Imagenes/zapurhom2.jpg" class="pt-3" alt="urb2">
+                    <h3>Diseño</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi esse voluptates rerum reiciendis atque nulla vitae omnis libero veniam velit? Distinctio recusandae ipsum esse, rerum architecto magni nemo veniam quas!</p>
+                </div>
 
 
-      <main class="pt-4 foto">
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-              <h1>Niños</h1>
-              <a href="niños.html" class="btn btn-dark">Conoce mas</a>
-                <img src="Imagenes/niño.jpg"  class="d-block w-100 pt-4" alt="niñozapa">
               </div>
-              <div class="carousel-item">
-                <h1>Mujeres</h1>
-                <a href="mujeres.html" class="btn btn-dark">Conoce mas</a>
-                <img src="Imagenes/mujer.jpg" class="d-block w-100 pt-4" alt="mujerzapa">
-              </div>
-              <div class="carousel-item">
-                <h1>Hombres</h1>
-                <a href="hombres.html" class="btn btn-dark">Conoce mas</a>
-                <img src="Imagenes/hombre.jpg" class="d-block w-100 pt-4" alt="hombrezapa">
-              </div>
-            </div>
-        
+
+          </div>
       </main>
+
+
 
 
 
