--- a/mujeres.html
+++ b/mujeres.html
@@ -32,13 +32,14 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="niños.html">Niños</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="mujeres.html">Mujeres</a>
+                    <a class="nav-link active" aria-current="page" href="mujeres.html">Mujeres</a>
+                  </li>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="hombres.html">Hombres</a>
@@ -53,28 +54,29 @@
           </nav>    
       </header>
 
-
-
-      <main class="pt-4 foto">
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-              <h1>Niños</h1>
-              <a href="niños.html" class="btn btn-dark">Conoce mas</a>
-                <img src="Imagenes/niño.jpg"  class="d-block w-100 pt-4" alt="niñozapa">
+      <main>
+          <div class="container">
+              <div class="row py-5 text-center" >
+                <h2><strong>Urbanas</strong> </h2>
+                  <div class="col-md-6 py-3 img-fluid">
+                <img src="/Imagenes/urbanamujer.png" class="pb-3" width="500px" height="400px" alt="zapa urbana">
+                <h3>Classic Black</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum doloribus dolore fugit iure consectetur dolorum corporis harum impedit distinctio perferendis illo, at, quisquam voluptatibus eum nulla error vel nesciunt sed.</p>
+                  </div>
+                  <div class="col-md-6 py-3 img-fluid">
+                    <img src="/Imagenes/urbanasmujer2.jpg" class="pb-3 colorrosa" width="500px" height="400px" alt="zapa urbana">
+                    <h3>The real Pink</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt odit at minima eaque necessitatibus excepturi dolorem, ipsum doloremque nisi earum asperiores ex laboriosam dolorum beatae assumenda esse a sint molestias!</p>
+                    <p></p>
+                      </div>
+                      <div class="col-md-12 py-5 img-fluid">
+                          <h2><strong> Training </strong></h2>
+                          <img src="/Imagenes/trainingdama.webp" class="py-3" width="1050px" alt="adasd">
+                          <h3>Unite a la velocidad</h3>
+                          <a href="mujeres.html" class="btn btn-dark">Hace click</a>
+                      </div>
               </div>
-              <div class="carousel-item">
-                <h1>Mujeres</h1>
-                <a href="mujeres.html" class="btn btn-dark">Conoce mas</a>
-                <img src="Imagenes/mujer.jpg" class="d-block w-100 pt-4" alt="mujerzapa">
-              </div>
-              <div class="carousel-item">
-                <h1>Hombres</h1>
-                <a href="hombres.html" class="btn btn-dark">Conoce mas</a>
-                <img src="Imagenes/hombre.jpg" class="d-block w-100 pt-4" alt="hombrezapa">
-              </div>
-            </div>
-        
+          </div>
       </main>
 
 
