--- a/hombres.html
+++ b/hombres.html
@@ -23,7 +23,7 @@
             <div class="container-fluid">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="index.html">
-                        <img src="/Imagenes/logozapa.webp" alt="logo zapatilla" width="60" height="45" class="d-inline-block ">
+                        <img src="Imagenes/logozapa.webp" alt="logo zapatilla" width="60" height="45" class="d-inline-block ">
                         Heck Shoes
                       </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,18 +58,18 @@
               <div class="row text-center">
                   <div class="col-md-12 py-5">
                       <h2><strong>Training</strong></h2>
-                       <img src="/Imagenes/deportivahombre.webp" class="py-3" alt="dephombre">
+                       <img src="Imagenes/deportivahombre.webp" class="py-3" alt="dephombre">
                        <h3>Estilo y calidad</h3>
                           <a href="hombres.html" class="btn btn-dark">Hace click</a>
                   </div>
                   <h2><strong>Urbanas</strong></h2>
                   <div class="col-md-6 pb-5">
-                      <img src="/Imagenes/zpaurhom1.jpg" class="pt-3" alt="urb1">
+                      <img src="Imagenes/zpaurhom1.jpg" class="pt-3" alt="urb1">
                       <h3>Elegancia</h3>
                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nesciunt quidem, natus pariatur incidunt suscipit, omnis odit, culpa similique eius assumenda? Rem commodi quibusdam voluptatum pariatur nemo impedit earum reiciendis.</p>
                   </div>
                   <div class="col-md-6 pb-5">
-                    <img src="/Imagenes/zapurhom2.jpg" class="pt-3" alt="urb2">
+                    <img src="Imagenes/zapurhom2.jpg" class="pt-3" alt="urb2">
                     <h3>Diseño</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi esse voluptates rerum reiciendis atque nulla vitae omnis libero veniam velit? Distinctio recusandae ipsum esse, rerum architecto magni nemo veniam quas!</p>
                 </div>
