--- a/mujeres.html
+++ b/mujeres.html
@@ -23,7 +23,7 @@
             <div class="container-fluid">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="index.html">
-                        <img src="/Imagenes/logozapa.webp" alt="logo zapatilla" width="60" height="45" class="d-inline-block ">
+                        <img src="Imagenes/logozapa.webp" alt="logo zapatilla" width="60" height="45" class="d-inline-block ">
                         Heck Shoes
                       </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,19 +59,19 @@
               <div class="row py-5 text-center" >
                 <h2><strong>Urbanas</strong> </h2>
                   <div class="col-md-6 py-3 img-fluid">
-                <img src="/Imagenes/urbanamujer.png" class="pb-3" width="500px" height="400px" alt="zapa urbana">
+                <img src="Imagenes/urbanamujer.png" class="pb-3" width="500px" height="400px" alt="zapa urbana">
                 <h3>Classic Black</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum doloribus dolore fugit iure consectetur dolorum corporis harum impedit distinctio perferendis illo, at, quisquam voluptatibus eum nulla error vel nesciunt sed.</p>
                   </div>
                   <div class="col-md-6 py-3 img-fluid">
-                    <img src="/Imagenes/urbanasmujer2.jpg" class="pb-3 colorrosa" width="500px" height="400px" alt="zapa urbana">
+                    <img src="Imagenes/urbanasmujer2.jpg" class="pb-3 colorrosa" width="500px" height="400px" alt="zapa urbana">
                     <h3>The real Pink</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt odit at minima eaque necessitatibus excepturi dolorem, ipsum doloremque nisi earum asperiores ex laboriosam dolorum beatae assumenda esse a sint molestias!</p>
                     <p></p>
                       </div>
                       <div class="col-md-12 py-5 img-fluid">
                           <h2><strong> Training </strong></h2>
-                          <img src="/Imagenes/trainingdama.webp" class="py-3" width="1050px" alt="adasd">
+                          <img src="Imagenes/trainingdama.webp" class="py-3" width="1050px" alt="adasd">
                           <h3>Unite a la velocidad</h3>
                           <a href="mujeres.html" class="btn btn-dark">Hace click</a>
                       </div>
