--- a/niños.html
+++ b/niños.html
@@ -23,7 +23,7 @@
             <div class="container-fluid">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="index.html">
-                        <img src="/Imagenes/logozapa.webp" alt="logo zapatilla" width="60" height="45" class="d-inline-block ">
+                        <img src="Imagenes/logozapa.webp" alt="logo zapatilla" width="60" height="45" class="d-inline-block ">
                         Heck Shoes
                       </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
