se agrega responsive

--- a/hombres.html
+++ b/hombres.html
@@ -54,22 +54,22 @@
       </header>
 
       <main>
-          <div class="container img-fluid">
+          <div class="container ">
               <div class="row text-center">
                   <div class="col-md-12 py-5">
                       <h2><strong>Training</strong></h2>
-                       <img src="Imagenes/deportivahombre.webp" class="py-3" alt="dephombre">
+                       <img src="Imagenes/deportivahombre.webp" class="py-3 img-fluid" alt="dephombre">
                        <h3>Estilo y calidad</h3>
                           <a href="hombres.html" class="btn btn-dark">Hace click</a>
                   </div>
                   <h2><strong>Urbanas</strong></h2>
                   <div class="col-md-6 pb-5">
-                      <img src="Imagenes/zpaurhom1.jpg" class="pt-3" alt="urb1">
+                      <img src="Imagenes/zpaurhom1.jpg" class="pt-3 img-fluid" alt="urb1">
                       <h3>Elegancia</h3>
                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nesciunt quidem, natus pariatur incidunt suscipit, omnis odit, culpa similique eius assumenda? Rem commodi quibusdam voluptatum pariatur nemo impedit earum reiciendis.</p>
                   </div>
                   <div class="col-md-6 pb-5">
-                    <img src="Imagenes/zapurhom2.jpg" class="pt-3" alt="urb2">
+                    <img src="Imagenes/zapurhom2.jpg" class="pt-3 img-fluid" alt="urb2">
                     <h3>Diseño</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi esse voluptates rerum reiciendis atque nulla vitae omnis libero veniam velit? Distinctio recusandae ipsum esse, rerum architecto magni nemo veniam quas!</p>
                 </div>
