--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
               <div class="carousel-item active">
               <h1>Niños</h1>
               <a href="niños.html" class="btn btn-dark">Conoce mas</a>
-                <img src="Imagenes/niño.jpg"  class="d-block w-100 pt-4" alt="niñozapa">
+                <img src="Imagenes/niño.jpg"  class="d-block w-100 pt-4 img-fluid" alt="niñozapa">
               </div>
               <div class="carousel-item">
                 <h1>Mujeres</h1>
                 <a href="mujeres.html" class="btn btn-dark">Conoce mas</a>
-                <img src="Imagenes/mujer.jpg" class="d-block w-100 pt-4" alt="mujerzapa">
+                <img src="Imagenes/mujer.jpg" class="d-block w-100 pt-4 img-fluid" alt="mujerzapa">
               </div>
               <div class="carousel-item">
                 <h1>Hombres</h1>
                 <a href="hombres.html" class="btn btn-dark">Conoce mas</a>
-                <img src="Imagenes/hombre.jpg" class="d-block w-100 pt-4" alt="hombrezapa">
+                <img src="Imagenes/hombre.jpg" class="d-block w-100 pt-4 img-fluid" alt="hombrezapa">
               </div>
             </div>
         
