--- a/niños.html
+++ b/niños.html
@@ -57,19 +57,19 @@
 
 <main>
     <div class="row py-5 text-center">
-        <div class="col-md-4 img-fluid movimiento" > 
+        <div class="col-md-4 movimiento" > 
             <a href="niños.html"> <h4>Como mamá</h4> </a>        
-             <img src="Imagenes/niña1.webp" class="border border-4 border border-danger px-4 input" alt="niña1" width="300px" height="200px">
+             <img src="Imagenes/niña1.webp" class="border border-4 border border-danger px-4 input img-fluid" alt="niña1" width="300px" height="200px">
              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus, inventore dolores? Provident deleniti voluptas adipisci eligendi nesciunt delectus ad eaque et sunt perferendis molestias non repellendus molestiae at, excepturi dolores?</p>
         </div>            
-        <div class="col-md-4 img-fluid movimiento " > 
+        <div class="col-md-4 movimiento " > 
             <a href="niños.html"> <h4>¿Cual me pongo?</h4> </a>          
-            <img src="Imagenes/niña2.jpg" class=" border border-4 border border-danger px-4" alt="niña2" width="300px" height="200px">
+            <img src="Imagenes/niña2.jpg" class=" border border-4 border border-danger px-4 img-fluid" alt="niña2" width="300px" height="200px">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto atque est eum accusamus animi accusantium unde assumenda commodi obcaecati fugiat ullam sint doloremque, eligendi qui sit ab officia tempora dolores?</p>
        </div>
-       <div class="col-md-4 img-fluid movimiento " >
+       <div class="col-md-4 movimiento " >
            <a href="niños.html"><h4>Vuelta al cole</h4></a>
-        <img src="Imagenes/niña3.jpg" class=" border border-4 border border-danger px-4" alt="niña3" width="300px" height="200px">
+        <img src="Imagenes/niña3.jpg" class=" border border-4 border border-danger px-4 img-fluid" alt="niña3" width="300px" height="200px">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam odit cupiditate culpa veritatis rem, ducimus fugit harum ad impedit totam illo facere quasi a repellendus similique inventore itaque quos voluptates.</p>
    </div>
     </div>
