--- a/niños.html
+++ b/niños.html
@@ -76,13 +76,13 @@
 
 
     <div class="row text center py-5 text-center">
-        <div class="col-md-6 img-fluid rota">
+        <div class="col-md-6 rota">
            <a href="niños.html"> <h3>¡¡A jugar!! </h3></a>
-         <img src="Imagenes/niño1.webp" class="d-flex justify-content-evenly border border-4 border border-primary px-4" alt="niño1" width="500px" height="300px">
+         <img src="Imagenes/niño1.webp" class="d-flex justify-content-evenly border border-4 border border-primary px-4 img-fluid" alt="niño1" width="500px" height="300px">
         </div>
-        <div class="col-md-6 img-fluid rota ">
+        <div class="col-md-6 rota ">
            <a href="niños.html"> <h3>Con toda la onda</h3></a>
-        <img src="Imagenes/niño2.jpg" class="d-flex justify-content-evenly border border-4 border border-primary px-4" alt="niño2" width="500px" height="300px">
+        <img src="Imagenes/niño2.jpg" class="d-flex justify-content-evenly border border-4 border border-primary px-4 img-fluid" alt="niño2" width="500px" height="300px">
         </div>
     </div>
 </main>
